# noether

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.local.json
.soroban/: config.toml
contracts/noether_common/: Cargo.toml
contracts/noether_common/src/: lib.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  storage.rs  test.rs  vault.rs
frontend/components/: order-form.tsx  portfolio-account-health.tsx  portfolio-allocation.tsx  top-navbar.tsx
frontend/components/providers/: wallet-provider.tsx
frontend/hooks/: useBalances.ts  useMarket.ts  useVault.ts  useWallet.ts
scripts/keeper/src/: index.ts
shared/errors/: Cargo.toml
shared/errors/src/: lib.rs
shared/types/: Cargo.toml
shared/types/src/: lib.rs
web/: README.md  package-lock.json  package.json  tailwind.config.js  vercel.json
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/faucet/: page.tsx
web/app/leaderboard/: page.tsx
web/app/portfolio/: page.tsx
web/app/trade/: page.tsx
web/app/vault/: page.tsx
web/components/faucet/: AmountCard.tsx  ClaimHistory.tsx  ClaimSection.tsx  HowItWorks.tsx  TrustlineSection.tsx
web/components/landing/: BrowserFrame.tsx  FlagshipSection.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  NoetherLogo.tsx  index.ts  landing.css
web/components/layout/: Header.tsx
web/components/leaderboard/: LeaderboardBanner.tsx  LeaderboardContent.tsx  index.ts
web/components/portfolio/: AccountHealth.tsx  AssetAllocation.tsx  (+2 more)
web/lib/: db.ts
web/scripts/: auto-update-oracle.ts
(+30 files in other folders)
