[workspace]
members = [
    "contracts/*",
    "shared/types",
    "shared/errors",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Noether Contributors"]

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

