[package]
name = "noether-vault"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
soroban-token-sdk.workspace = true
noether-types = { path = "../../shared/types" }
noether-errors = { path = "../../shared/errors" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-token-sdk.workspace = true

